--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ default-run = "dechib"
 
 [dependencies]
 anyhow = "1.0.86"
+bigdecimal = { version = "0.4.3", features = ["serde"] }
+hex = "0.4.3"
 postcard = { version = "1.0.8", features = ["alloc", "const_format"] }
 rocksdb = "0.22.0"
-serde = { version = "1.0.202", features = ["derive"] }
-sqlparser = { version = "0.46.0", features = ["serde"] }
+serde = { version = "1.0.202", features = ["derive", "rc"] }
+sqlparser = { version = "0.46.0", features = ["bigdecimal", "serde"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.8.0", features = ["v4"] }
