--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ tokio = { version = "1.38.1", features = ["net", "parking_lot", "sync", "rt-mult
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 uuid = { version = "1.8.0", features = ["v4"] }
+
+[dev-dependencies]
+tempfile = "3.12.0"
+tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
