--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,13 @@
-[package]
-name = "dechib"
-version = "0.1.0"
+[workspace]
+members = [
+    "dechib_core",
+    "dechib_api",
+    "dechib_auth",
+    "dechib"
+]
+
+[workspace.package]
 edition = "2021"
-default-run = "dechib"
-
-[dependencies]
-anyhow = "1.0.86"
-bigdecimal = { version = "0.4.3", features = ["serde"] }
-hex = "0.4.3"
-postcard = { version = "1.0.8", features = ["alloc", "const_format"] }
-rocksdb = "0.22.0"
-serde = { version = "1.0.202", features = ["derive", "rc"] }
-sqlparser = { version = "0.46.0", features = ["bigdecimal", "serde"] }
-tokio = { version = "1.38.1", features = ["net", "parking_lot", "sync", "rt-multi-thread"] }
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-uuid = { version = "1.8.0", features = ["v4"] }
-
-[dev-dependencies]
-tempfile = "3.12.0"
-tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
+rust-version = "1.71.0"
+authors = []
+license = "MIT"
